# audio_log

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  daylog.toml  pyproject.toml  start-daylog-gpu.bat
.github/workflows/: ci.yml
docs/: work_log.md
docs/adr/: 0001-core-stack.md
docs/wiki/: architecture.md  data_formats.md  dependencies.md  pipeline.md  troubleshooting.md
scripts/: check_docs.py  run_pipeline.ps1  run_pipeline.sh
src/daylog/: __init__.py  cli.py  config.py  constants.py
src/daylog/gui/: __init__.py  __main__.py  app.py  date_parser.py  processor.py  queue_manager.py  ui_components.py
src/daylog/io/: __init__.py  ffmpeg.py  hash.py  paths.py  recording.py  serialize.py  time.py  validate.py  versions.py
src/daylog/models/: __init__.py
src/daylog/pipeline/: __init__.py  asr.py  diarize.py  merge.py  run.py  vad.py
tests/fixtures/: README.md
tests/integration/: test_pipeline_silence.py
tests/unit/: test_callbacks.py  test_time.py  test_vad_merge.py
