[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daylog"
version = "0.1.0"
description = "Local-first audio day log processor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Daylog Team"}]
dependencies = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "faster-whisper>=1.0.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
gui = [
  "tkinterdnd2>=0.3.0",
]

[project.scripts]
daylog = "daylog.cli:main"
daylog-gui = "daylog.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
